--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ p {
 .li-mob {
   display: block;
   width: 100%;
+
 }
 .stuff-soc-list {
   display: flex;
@@ -147,7 +148,7 @@ p {
 .our-stuff-section {
   background-color: var(--back-button-color);
   padding-top: 120px;
-  padding-bottom: 72px;
+  padding-bottom: 128px;
 }
 
 /* ---------OUR-WORK---------- */
@@ -196,7 +197,7 @@ p {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  /* row-gap: 72px; */
+  row-gap: 72px;
   /* column-gap: 16px; */
 }
 
@@ -229,11 +230,12 @@ p {
   border-color: var(--secondary-button-color);
 }
 
-/* .our-team { */
-  /* display: flex; */
-  /* flex-wrap: wrap; */
-  /* gap: 24px; */
-/* } */
+.our-team {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 72px;
+
+}
 
 .container {
   margin-left: auto;
@@ -980,56 +982,9 @@ img {
 
 /* ------MEDIA--------- */
 
-@media screen and (min-width: 480px) {
-  .container {
-    width: 428px;
-  }
-  .our-stuff-section {
-    padding-top: 96px;
-  }
-  .li-mob {
-    margin-bottom: 72px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-  .our-team{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .li-mob {
-    width: calc((100%-24px) / 2);
-    gap: 24px;
-    grid-row-gap:64px;
-  }
-}
-.customers-list {
-  width: calc((100%-48px) / 3);
-  height: 88px;
-}
 
 
 
-@media screen and (min-width: 1200px) {
-  .container{
-    width: 1200px;
 
-  }
-  .our-stuff-section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
-  .li-mob {
-    width: calc((100%-72px) / 4);
-  }
-  .customers-section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
-  .customers-list {
-    width: calc((100%-120px) / 6);
-    height: 88px;
-  }
-}
+
+
