--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,27 +1,27 @@
-@media screen and (min-width: 480px) {
-    .container {
-      width: 428px;
-    }
-    .headlines-section {
-        text-align: center;
-        padding-top: 112px;
-        padding-left: 54px;
-        padding-right: 56px;
-        padding-bottom: 112px;
-        margin: 0 auto;
-      }
-    
-    .our-stuff-section {
-      padding-top: 96px;
-    }
-    .customers-list {
-      width: calc((100% - 16px) / 2);
-    
-    
-      /* width: calc((100%-120px) / 6); */
-      height: 88px;
-    }
-    .li-mob {
-      /* margin-bottom: 72px; */
-    }
+@media screen and (min-width: 428px) and (max-width: 767px) {
+  .container {
+    width: 428px;
   }
+  .headlines-section {
+    text-align: center;
+    padding-top: 112px;
+    padding-left: 54px;
+    padding-right: 56px;
+    padding-bottom: 112px;
+    margin: 0 auto;
+  }
+
+  .our-stuff-section {
+    padding-top: 96px;
+  }
+  .customers-list {
+    width: calc((100% - 16px) / 2);
+
+    /* width: calc((100%-120px) / 6); */
+    height: 88px;
+  }
+  .list-skills-item:not(:last-child) {
+    margin-bottom: 72px;
+  }
+}
+
