--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,32 @@ p {
 .header {
   border-bottom: solid var(--footer-text-color);
 }
+.menu-open{
+  width: 32px;
+  height: 22px;
+  background-color:transparent;
+  border: transparent;
+  padding: 0;
+}
+.menu-open-icon{
+stroke: #2E2F42;
+}
+.menu-close{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  
+  width: 24px;
+  height: 24px;
+  background: #E7E9FC;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 50%;
+
+}
+
+
 .name-stuff {
   width: 264px;
   text-align: center;
@@ -115,10 +141,10 @@ p {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.li-mob {
+/* .li-mob {
   display: block;
   width: 100%;
-}
+} */
 .stuff-soc-list {
   display: flex;
   justify-content: center;
@@ -234,6 +260,7 @@ p {
 .our-team {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   row-gap: 72px;
 }
 
@@ -247,53 +274,29 @@ p {
 .container-flex {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .header-logo,
-.header-link,
-.header-tel,
-.header-tel {
+.header-link {
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-bottom: 22px;
   display: inline-block;
 }
-.header-link {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.current {
-  color: #404bbf;
-}
-.header-link.current::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  background-color: #404bbf;
-  height: 4px;
-  left: 0;
-  bottom: 0;
-  border-radius: 2px;
-}
-.header-link:hover,
-.header-link:focus {
-  color: var(--secondary-button-color);
-}
-
 .header-list {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 
-.contacts-list {
+
+.header-navigation {
   display: flex;
-  margin-left: auto;
   align-items: center;
 }
+.contacts-list{
+  display: none;
+}
+
+
 
 .logo-studio.logo-studio-footer {
   color: var(--white-color);
@@ -358,35 +361,9 @@ img {
   color: var(--secondary-text-color);
 }
 
-.header-navigation {
-  display: flex;
-  align-items: center;
-}
 
-.header-mail {
-  margin-right: 40px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-}
-.header-mail:hover {
-  color: var(--secondary-button-color);
-}
-.header-tel {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 
-  color: var(--secondary-text-color);
-}
-.header-tel:hover {
-  color: var(--secondary-button-color);
-}
 .our-skills {
   font-weight: 500;
   font-size: 20px;
