--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ stroke: #2E2F42;
   align-items: center;
   justify-content: center;
 
-  
+
   width: 24px;
   height: 24px;
   background: #E7E9FC;
@@ -830,42 +830,47 @@ img {
 .footer {
   background-color: var(--primary-text-color);
   color: var(--footer-text-color);
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 104px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .ftr-logo {
   font-family: Raleway;
 
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 16px;
   /* margin-right: 269px; */
 }
 .footer-content {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  /* or 150% */
-
-  letter-spacing: 0.02em;
-
-  /* CORNFLOWER */
-
-  max-width: 264px;
   margin-bottom: 0;
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+/* or 150% */
+
+letter-spacing: 0.02em;
+
+/* CORNFLOWER */
+
+color: #E7E9FC;
 }
 .ftr {
-  display: flex;
+  /* display: flex; */
 }
 .socaial-one {
-  margin-right: 120px;
+  /* margin-right: 120px; */
+  padding: 0 60px;
+  margin-bottom: 72px;
+}
+.socaial-two{
+  margin-bottom: 72px;
 }
 
 .social-media {
-  display: block;
-
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 
   font-weight: 500;
   font-size: 16px;
@@ -880,7 +885,7 @@ img {
   display: flex;
   gap: 16px;
 
-  /* justify-content: center; */
+  justify-content: center;
   margin-left: auto;
 }
 .ftr-soc-item {
@@ -905,8 +910,9 @@ img {
 .input-footer {
   display: block;
   margin-right: 24px;
+  margin-bottom: 16px;
   padding-left: 16px;
-  width: 264px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -923,9 +929,8 @@ img {
 }
 
 .sub-label {
-  display: block;
-
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 
   font-weight: 500;
   font-size: 16px;
@@ -973,6 +978,8 @@ img {
 }
 .form {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* ------MEDIA--------- */
