--- a/css/styles.css
+++ b/css/styles.css
@@ -110,13 +110,16 @@ p {
   height: 22px;
   background-color:transparent;
   border: transparent;
-  padding: 0;
+  padding:var(--primary-text-color);
+  
 }
 .menu-open-icon{
 stroke: #2E2F42;
 }
 .menu-close{
-
+margin-left: auto;
+margin-right: 40px;
+margin-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -129,6 +132,103 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 50%;
 
 }
+.mob-menu{
+  padding-top: 40px;
+  padding-bottom: 40px;
+  top:0;
+  left: 0;
+  position:fixed;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color:#FFFFFF;
+}
+.mob-menu-list {
+}
+
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mob-menu-link {
+  font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+/* identical to box height, or 111% */
+
+letter-spacing: 0.02em;
+text-transform: capitalize;
+
+/* NAVY BLUE */
+
+color: #2E2F42;
+
+}
+.curlink{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+color: #4D5AE5;
+
+  
+
+}
+.mob-menu-contacts-list {
+  margin-bottom: 48px;
+}
+.mob-menu-item-cont {
+  margin-bottom: 40px;
+}
+.mob-menu-tel {
+  font-weight: 600;
+font-size: 36px;
+line-height: 1.11;
+/* identical to box height, or 111% */
+letter-spacing: 0.01em;
+text-transform: capitalize;
+color: #4D5AE5;
+
+}
+.mob-menu-mail {
+  font-weight: 500;
+font-size: 20px;
+line-height: 1.20;
+/* identical to box height, or 120% */
+
+letter-spacing: 0.02em;
+
+/* SLATE */
+
+color: #434455;
+
+}
+
+.mob-soc-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 56px;
+}
+.mob-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.mob-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  border-radius: 50%;
+  background-color: #4D5AE5;
+}
+
+
+
+
+
 
 
 .name-stuff {
@@ -280,7 +380,7 @@ border-radius: 50%;
 .header-logo,
 .header-link {
   padding-top: 24px;
-  padding-bottom: 22px;
+  padding-bottom: 24px;
   display: inline-block;
 }
 .header-list {
@@ -856,9 +956,7 @@ letter-spacing: 0.02em;
 
 color: #E7E9FC;
 }
-.ftr {
-  /* display: flex; */
-}
+
 .socaial-one {
   /* margin-right: 120px; */
   padding: 0 60px;
