--- a/css/styles.css
+++ b/css/styles.css
@@ -109,19 +109,22 @@ p {
   border-bottom: solid var(--footer-text-color);
 }
 .menu-open{
+
+  display: block;
   width: 32px;
   height: 22px;
   background-color:transparent;
   border: transparent;
-  padding:var(--primary-text-color);
+  padding: 5px;
+  
   
 }
 .menu-open-icon{
+
 stroke: #2E2F42;
 }
 .menu-close{
 margin-left: auto;
-margin-right: 40px;
 margin-bottom: 16px;
   display: flex;
   align-items: center;
@@ -136,11 +139,13 @@ border-radius: 50%;
 
 }
 .mob-menu{
+
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding-left: 40px;
   padding-top: 40px;
   padding-bottom: 40px;
+  padding-right: 40px;
   top:0;
   left: 0;
   position:fixed;
@@ -154,6 +159,8 @@ border-radius: 50%;
   pointer-events: none;
 }
 .mob-menu > .container{
+  width: 100%;
+  padding: 0;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -221,8 +228,6 @@ color: #434455;
 
 .mob-soc-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 56px;
 }
 .mob-soc-item {
@@ -878,8 +883,8 @@ img {
 
 .headlines-section {
   padding-top: 112px;
-  padding-left: 54px;
-  padding-right: 56px;
+  /* padding-left: 54px;
+  padding-right: 56px; */
   padding-bottom: 112px;
   margin: 0 auto;
   text-align: center;
@@ -890,7 +895,6 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/mobile-back.jpg);
-  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -954,12 +958,11 @@ img {
   font-family: Raleway;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin-bottom: 16px;
   /* margin-right: 269px; */
 }
 .footer-content {
-  max-width: 264px;
   margin-bottom: 0;
   font-weight: 400;
 font-size: 16px;
@@ -972,10 +975,13 @@ letter-spacing: 0.02em;
 
 color: #E7E9FC;
 }
+.soc-tab{
+  padding: 0 65px;
+
+}
 
 .social-one {
   /* margin-right: 120px; */
-  padding: 0 60px;
   margin-bottom: 72px;
 }
 .social-two{
