--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,6 +2,11 @@
   .container {
     width: 768px;
   }
+  .header > .container {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
 
   .menu-open {
     display: none;
@@ -39,14 +44,12 @@
   }
 
   .contacts-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    /* margin-left: auto; */
-    align-items: center;
+    display: block;
   }
-  .item_cont {
-    display: inline;
+
+  .item_cont:not(:last-child) {
+    display: block;
+    margin-bottom: 15px;
   }
   .header-mail {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -73,8 +76,8 @@
   /* ______HEADLINE________ */
   .headlines-section {
     padding-top: 112px;
-    padding-left: 137px;
-    padding-right: 137px;
+    /* padding-left: 137px; */
+    /* padding-right: 137px; */
     padding-bottom: 112px;
     margin: 0 auto;
     text-align: center;
@@ -166,40 +169,49 @@
     /* row-gap: 64px; */
     margin-bottom: 0;
   }
+  .our-stuff-section > .container {
+    padding-left: 108px;
+    padding-right: 108px;
+  }
+  .customers-section > .container {
+    padding-left: 108px;
+    padding-right: 108px;
+  }
   .customers-list {
     width: calc((100% - 16px) / 2);
     height: 88px;
   }
   .soc-tab {
     display: flex;
-  margin-bottom: 72px;
-
+    margin-bottom: 72px;
+    padding: 0;
   }
   .social-one {
     padding: 0;
     margin: 0;
-
   }
   .social-two {
+    margin-bottom: 0;
     margin-left: 24px;
-
   }
-  .sub-label{
+  .sub-label {
     justify-content: flex-start;
   }
-  .form{
+  .form {
     flex-wrap: nowrap;
     justify-content: flex-start;
   }
-  .input-footer{
+  .input-footer {
     margin-right: 24px;
     width: 264px;
   }
-
 
   .footer > .container {
     width: 100%;
     padding-left: 108px;
     padding-right: 164px;
+  }
+  .ftr-logo {
+    justify-content: flex-start;
   }
 }
