--- a/css/styles.css
+++ b/css/styles.css
@@ -964,7 +964,7 @@ img {
   /* margin-right: 269px; */
 }
 .footer-content {
-  max-width: 264px;
+  width: 264px;
   margin-bottom: 0;
   font-weight: 400;
 font-size: 16px;
