--- a/css/tablet.css
+++ b/css/tablet.css
@@ -54,8 +54,8 @@
   .header-mail {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
+    font-size: 12px;
+    line-height: 1.3;
     letter-spacing: 0.02em;
     color: var(--secondary-text-color);
   }
@@ -64,8 +64,8 @@
   }
   .header-tel {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
+    font-size: 12px;
+    line-height: 1.3;
     letter-spacing: 0.02em;
 
     color: var(--secondary-text-color);
@@ -178,10 +178,10 @@
     padding-right: 108px;
   }
   .customers-list {
-    width: calc((100% - 16px) / 2);
+    width: calc((100% - 48px) / 3);
     height: 88px;
   }
-  
+
   .soc-tab {
     display: flex;
     margin-bottom: 72px;
@@ -196,13 +196,14 @@
     margin-left: 24px;
   }
   .sub-label {
-    justify-content: flex-start;
+    text-align: start;
   }
   .form {
     flex-wrap: nowrap;
     justify-content: flex-start;
   }
   .input-footer {
+    margin-bottom: 0;
     margin-right: 24px;
     width: 264px;
   }
@@ -213,6 +214,6 @@
     padding-right: 164px;
   }
   .ftr-logo {
-    justify-content: flex-start;
+    text-align: start;
   }
 }
